# domoboi-edge

./: .gitignore  README.md  atm90e36.py  check_modem.py  client.py  config.example.yaml  date.sh  diagnose_ct.py  diagnose_spi.py  echo.py  net.sh  nilm_processor.py  sender.py  setup.sh  start.sh  test_nilm.py
testctread/: CMakeLists.txt  ReadMe.md  main.c  main.h
testctread/device/: atm30e36a.h  atm90e36a.c
testctread/driver/: spi.c  spi.h
